--- a/index.html
+++ b/index.html
@@ -2062,6 +2062,15 @@ Warehouse 13, 8-12 Leighton Place, Hornsby (Sydney), NSW 2077, Australia<br><a h
 <script type="text/javascript" src="https://cdn.neto.com.au/assets/neto-cdn/bootstrap/3.3.6/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://www.littlebirdelectronics.com.au/assets/themes/skeletal/js/custom.js?1516529565"></script>
 <script type="text/javascript" src="https://cdn.neto.com.au/assets/neto-cdn/jquery_ui/1.11.1/js/jquery-ui-1.8.18.custom.min.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearchLite.min.js"></script>
+<script>
+var client = algoliasearch('U34J99QLYK', '54ffd9b3efb53d49a130a7acdbe8742c');
+var index  = client.initIndex('lbe-products');
+
+</script>
+
 <script>(function( NETO, $, undefined ) { NETO.systemConfigs = {"currency_symbol":"$"}; }( window.NETO = window.NETO || {}, jQuery ));</script>
 
 
