--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@ ga('create', 'UA-1590646-1', 'auto');
 <form name="productsearch" method="get" action="https://www.littlebirdelectronics.com/" role="search" aria-label="Product Search">
 <input type="hidden" name="rf" value="kw" />
 <div class="input-group">
-<input class="form-control ajax_search" value="" id="name_search" autocomplete="off" name="kw" type="search" aria-label="Input Search" />
-<span class="input-group-btn">
-<button type="submit" value="Search" class="btn btn-default" aria-label="Search Site"><i class="fa fa-search"></i></button>
-</span>
+    <input class="form-control ajax_search" value="" id="name_search" autocomplete="off" name="kw" type="search" aria-label="Input Search" />
+    <span class="input-group-btn">
+    <button type="submit" value="Search" class="btn btn-default" aria-label="Search Site"><i class="fa fa-search"></i></button>
+    </span>
 </div>
+<div class="results">
+	<ul id="users"></ul>
+</div>
+
 </form>
 </div>
 </div>
@@ -2066,9 +2070,13 @@ Warehouse 13, 8-12 Leighton Place, Hornsby (Sydney), NSW 2077, Australia<br><a h
 
 <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearchLite.min.js"></script>
 <script>
+
+var $input = $('input');
+var $users = $('#users');
+
 $(document).ready(function() {
   var client = algoliasearch('U34J99QLYK', '54ffd9b3efb53d49a130a7acdbe8742c');
-  var index = client.initIndex('lbe-products');
+  var index  = client.initIndex('lbe-products');
   var $input = $('input');//$('#name_search').val();
   $input.keyup(function() {
     index.search($input.val(), {
@@ -2084,8 +2092,14 @@ function searchCallback(err, content) {
     console.error(err);
     return;
   }
-  console.log(content);};
-
+  console.log(content);
+	var $users = $('#users');
+	$users.empty();
+	
+	for (var i = 0; i < content.hits.length; i++) {
+		$users.append('<li>' + content.hits[i].title + '</li>');
+	}
+};
 </script>
 
 <script>(function( NETO, $, undefined ) { NETO.systemConfigs = {"currency_symbol":"$"}; }( window.NETO = window.NETO || {}, jQuery ));</script>
