--- a/index.html
+++ b/index.html
@@ -2115,19 +2115,8 @@ function searchCallback(err, content) {
 #users li:last-child {border-bottom: none;}
 </style>
 
-
-
-
-
 <script>(function( NETO, $, undefined ) { NETO.systemConfigs = {"currency_symbol":"$"}; }( window.NETO = window.NETO || {}, jQuery ));</script>
-
-
-
-<script>
-ga('send', 'pageview');</script>
-
-
-
+<script>ga('send', 'pageview');</script>
 
 <script type="text/javascript">if( $('#shipbox').length ){$("#shipbox").html($("#shipbox").html().replace(/\(ETA\:\s\d\sdays\)/g, ''));}
 </script>
